# 3dviewer

./: .gitignore  .gitlab-ci.yml  CMakePresets.json  README.md
src/: CMakeLists.txt  main.cpp
src/controllers/: controller.cpp  controller.h
src/docs/: Doxyfile  README.md
src/facade/: viewerFacade.cpp  viewerFacade.h
src/models/: model.cpp  model.h  strategy.h
src/resources/: Info.plist.in  shaders.qrc
src/resources/shaders/: triangle.frag  triangle.vert
src/tests/: 3DViewerTests.cpp
src/utils/: logger.cpp  logger.h
src/views/: glWidget.cpp  glWidget.h  mainWindow.cpp  mainWindow.h
